# ClawEditor

./: Cargo.toml  README.md  build.rs  wxRust.rc
.github/workflows/: main.yml
src/: commands.rs  editor_ctrl.rs  editor_frame.rs  main.rs  observer.rs  unsaved_changes.rs
