[package]
name = "claw_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wx = { package = "wxrust", version = "0.0.1-alpha" }

[patch.crates-io]
wxrust = { git = "https://github.com/kenz-gelsoft/wxRust2" }
wxrust-base = { git = "https://github.com/kenz-gelsoft/wxRust2", branch = "call_after" }
